proyecto f1 y f2/Transact_OLC1/parser.output
Terminals unused in grammar

   arreglo
   tid


Grammar

    0 $accept: INICIO $end

    1 INICIO: LCLASE

    2 LCLASE: LCLASE CLASE
    3       | CLASE

    4 CLASE: tClase id llavI CUERPO llavD
    5      | tClase id llavI llavD

    6 CUERPO: CUERPO ENCAPSULAR VAR_ASIG
    7       | CUERPO ENCAPSULAR ASIGNACION_VEC
    8       | CUERPO VAR_ASIG
    9       | CUERPO ASIGNACION_VEC
   10       | CUERPO MAIN
   11       | CUERPO METODO
   12       | CUERPO ENCAPSULAR VAR_DECLARACION
   13       | CUERPO VAR_DECLARACION
   14       | CUERPO REASIGNACION_VEC
   15       | CUERPO INSTANCIA
   16       | CUERPO OBJECTO_ASIGNACION
   17       | CUERPO ACCES_VFM Dolar
   18       | CUERPO DECLARAR_ARREGLO
   19       | CUERPO REASIGNACION_VAR_CLASE
   20       | ENCAPSULAR VAR_ASIG
   21       | ENCAPSULAR ASIGNACION_VEC
   22       | VAR_ASIG
   23       | ASIGNACION_VEC
   24       | ENCAPSULAR VAR_DECLARACION
   25       | VAR_DECLARACION
   26       | MAIN
   27       | METODO
   28       | REASIGNACION_VEC
   29       | INSTANCIA
   30       | ACCES_VFM Dolar
   31       | REASIGNACION_VAR_CLASE
   32       | DECLARAR_ARREGLO
   33       | OBJECTO_ASIGNACION

   34 MAIN: tMain pari pard llavI LS llavD

   35 LS: LS SEN_IF
   36   | SEN_IF
   37   | LS VAR_ASIG
   38   | LS ASIGNACION_VEC
   39   | LS IMPRIMIR
   40   | LS VAR_DECLARACION
   41   | LS REASIGNACION_VEC
   42   | LS REPETIR
   43   | LS MIENTRAS
   44   | LS HACER_MIENTRAS
   45   | LS ROMPER
   46   | LS SALIR
   47   | LS RETORNAR
   48   | LS CONTINUAR
   49   | LS AUMENTO Dolar
   50   | LS DECREMENTO Dolar
   51   | LS LLAMADA Dolar
   52   | LS ACCES_VFM Dolar
   53   | LS PARA
   54   | LS NOTIFICACION
   55   | LS REASIGNACION_VAR_CLASE
   56   | LS INSTANCIA
   57   | LS DECLARAR_ARREGLO
   58   | LS OBJECTO_ASIGNACION
   59   | VAR_ASIG
   60   | IMPRIMIR
   61   | VAR_DECLARACION
   62   | REPETIR
   63   | MIENTRAS
   64   | HACER_MIENTRAS
   65   | ROMPER
   66   | SALIR
   67   | CONTINUAR
   68   | RETORNAR
   69   | AUMENTO Dolar
   70   | DECREMENTO Dolar
   71   | PARA
   72   | LLAMADA Dolar
   73   | ACCES_VFM Dolar
   74   | NOTIFICACION
   75   | REASIGNACION_VEC
   76   | ASIGNACION_VEC
   77   | OBJECTO_ASIGNACION
   78   | REASIGNACION_VAR_CLASE
   79   | DECLARAR_ARREGLO
   80   | INSTANCIA

   81 REASIGNACION_VAR_CLASE: id tPunto id eq EXPL Dolar

   82 ACCES_VFM: id tPunto LLAMADA

   83 INSTANCIA: id id eq tNuevo id pari pard Dolar
   84          | id id Dolar

   85 OBJECTO_ASIGNACION: id eq tNuevo id pari pard Dolar

   86 METODO: ENCAPSULAR TIPO id MI_PARAMETRO llavI LS llavD
   87       | TIPO id MI_PARAMETRO llavI LS llavD

   88 MI_PARAMETRO: pari LPARAMETRO pard
   89             | pari pard

   90 ENCAPSULAR: SOBRESRIBIR VISIBILIDAD
   91           | VISIBILIDAD
   92           | SOBRESRIBIR

   93 SOBRESRIBIR: tsobrescribir

   94 LPARAMETRO: LPARAMETRO coma PARAMETRO
   95           | PARAMETRO

   96 PARAMETRO: TIPO EXPL
   97          | EXPL

   98 IMPRIMIR: tPrint pari EXPL pard Dolar

   99 SEN_IF: IF
  100       | IF ELSE_IF

  101 REPETIR: tRepetir pari EXPL pard llavI LS llavD

  102 PARA: tPara pari INICIAR EXPL Dolar ACTUALIZACION pard llavI LS llavD

  103 INICIAR: VAR_ASIG
  104        | VAR_DECLARACION

  105 ACTUALIZACION: AUMENTO
  106              | DECREMENTO

  107 MIENTRAS: tMientras pari EXPL pard llavI LS llavD

  108 HACER_MIENTRAS: tHacer llavI LS llavD tMientras pari EXPL pard Dolar

  109 ELSE_IF: ELSE
  110        | prSino SEN_IF

  111 IF: prSi pari EXPL pard llavI LS llavD

  112 ELSE: prSino llavI LS llavD

  113 VAR_ASIG: TIPO LISTAID eq EXPL Dolar
  114         | id eq EXPL Dolar

  115 ASIGNACION_VEC: tArreglo TIPO LISTAID DIMENCION eq llavI VALOR_VEC llavD Dolar

  116 DECLARAR_ARREGLO: tArreglo TIPO LISTAID DIMENCION Dolar

  117 VAR_DECLARACION: TIPO LISTAID Dolar

  118 LISTAID: LISTAID coma id
  119        | id

  120 EXPRESION: EXPRESION coma EXPA
  121          | EXPA

  122 DIMENCION: DIM1
  123          | DIM2
  124          | DIM3

  125 DIM1: corI EXPA corD

  126 DIM2: corI EXPA corD corI EXPA corD

  127 DIM3: corI EXPA corD corI EXPA corD corI EXPA corD

  128 VALOR_VEC: UNIDIMENCION
  129          | BIDIMENCION
  130          | TRIDIMENCION

  131 UNIDIMENCION: EXPRESION

  132 BIDIMENCION: BIDIMENCION coma LISBI
  133            | LISBI

  134 LISBI: llavI EXPRESION llavD

  135 TRIDIMENCION: TRIDIMENCION coma LISTRI
  136             | LISTRI

  137 LISTRI: llavI BIDIMENCION llavD

  138 ACCESO_VEC: id DIMENCION

  139 REASIGNACION_VEC: ACCESO_VEC eq EXPL Dolar

  140 ROMPER: tRomper Dolar

  141 SALIR: tSalir Dolar

  142 CONTINUAR: tContinuar Dolar

  143 RETORNAR: tRetornar EXPL Dolar

  144 NOTIFICACION: tNotificacion pari EXPL coma EXPL pard Dolar

  145 AUMENTO: id tAumento

  146 DECREMENTO: id tDecremento

  147 LLAMADA: id pari LPARAMETRO pard
  148        | id pari pard

  149 TIPO: prInt
  150     | prString
  151     | prBooleano
  152     | prBool
  153     | prChar
  154     | prDouble
  155     | tVoid
  156     | tArreglo

  157 VISIBILIDAD: tPrivado
  158            | tProtegido
  159            | tPublico

  160 EXPL: Snot EXPL
  161     | EXPL Sand EXPL
  162     | EXPL Snand EXPL
  163     | EXPL Sor EXPL
  164     | EXPL Sxor EXPL
  165     | EXPR

  166 EXPR: EXPR eqeq EXPR
  167     | EXPR difQ EXPR
  168     | EXPR menorQ EXPR
  169     | EXPR mayorQ EXPR
  170     | EXPR menorIgualQ EXPR
  171     | EXPR mayorIgualQ EXPR
  172     | EXPA

  173 EXPA: EXPA suma EXPA
  174     | EXPA menos EXPA
  175     | EXPA multi EXPA
  176     | EXPA division EXPA
  177     | EXPA potencia EXPA
  178     | menos EXPA
  179     | entero
  180     | caracter
  181     | decimal
  182     | booleano
  183     | cadena
  184     | id
  185     | pari EXPL pard
  186     | LLAMADA
  187     | ACCES_VFM
  188     | id tPunto id
  189     | id id
  190     | ACCESO_VEC


Terminals, with rules where they appear

$end (0) 0
error (256)
entero (258) 179
decimal (259) 181
caracter (260) 180
booleano (261) 182
cadena (262) 183
id (263) 4 5 81 82 83 84 85 86 87 114 118 119 138 145 146 147 148 184
    188 189
pari (264) 34 83 85 88 89 98 101 102 107 108 111 144 147 148 185
pard (265) 34 83 85 88 89 98 101 102 107 108 111 144 147 148 185
suma (266) 173
menos (267) 174 178
multi (268) 175
division (269) 176
potencia (270) 177
arreglo (271)
corI (272) 125 126 127
corD (273) 125 126 127
eq (274) 81 83 85 113 114 115 139
llavI (275) 4 5 34 86 87 101 102 107 108 111 112 115 134 137
llavD (276) 4 5 34 86 87 101 102 107 108 111 112 115 134 137
coma (277) 94 118 120 132 135 144
Dolar (278) 17 30 49 50 51 52 69 70 72 73 81 83 84 85 98 102 108 113
    114 115 116 117 139 140 141 142 143 144
tClase (279) 4 5
tPara (280) 102
tPunto (281) 81 82 188
eqeq (282) 166
difQ (283) 167
menorQ (284) 168
menorIgualQ (285) 170
mayorQ (286) 169
mayorIgualQ (287) 171
Snot (288) 160
Sand (289) 161
Snand (290) 162
Sor (291) 163
Sxor (292) 164
tid (293)
prInt (294) 149
prString (295) 150
prBooleano (296) 151
prBool (297) 152
prChar (298) 153
prDouble (299) 154
prSi (300) 111
prSino (301) 110 112
tMain (302) 34
tPrint (303) 98
tPublico (304) 159
tPrivado (305) 157
tProtegido (306) 158
tAumento (307) 145
tDecremento (308) 146
tRomper (309) 140
tRepetir (310) 101
tMientras (311) 107 108
tContinuar (312) 142
tSalir (313) 141
tsobrescribir (314) 93
tVoid (315) 155
tHacer (316) 108
tRetornar (317) 143
tNotificacion (318) 144
tArreglo (319) 115 116 156
tNuevo (320) 83 85


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
INICIO (67)
    on left: 1, on right: 0
LCLASE (68)
    on left: 2 3, on right: 1 2
CLASE (69)
    on left: 4 5, on right: 2 3
CUERPO (70)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33, on right: 4 6 7 8 9 10 11 12 13 14 15
    16 17 18 19
MAIN (71)
    on left: 34, on right: 10 26
LS (72)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80, on right: 34 35 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 86 87 101 102 107 108 111
    112
REASIGNACION_VAR_CLASE (73)
    on left: 81, on right: 19 31 55 78
ACCES_VFM (74)
    on left: 82, on right: 17 30 52 73 187
INSTANCIA (75)
    on left: 83 84, on right: 15 29 56 80
OBJECTO_ASIGNACION (76)
    on left: 85, on right: 16 33 58 77
METODO (77)
    on left: 86 87, on right: 11 27
MI_PARAMETRO (78)
    on left: 88 89, on right: 86 87
ENCAPSULAR (79)
    on left: 90 91 92, on right: 6 7 12 20 21 24 86
SOBRESRIBIR (80)
    on left: 93, on right: 90 92
LPARAMETRO (81)
    on left: 94 95, on right: 88 94 147
PARAMETRO (82)
    on left: 96 97, on right: 94 95
IMPRIMIR (83)
    on left: 98, on right: 39 60
SEN_IF (84)
    on left: 99 100, on right: 35 36 110
REPETIR (85)
    on left: 101, on right: 42 62
PARA (86)
    on left: 102, on right: 53 71
INICIAR (87)
    on left: 103 104, on right: 102
ACTUALIZACION (88)
    on left: 105 106, on right: 102
MIENTRAS (89)
    on left: 107, on right: 43 63
HACER_MIENTRAS (90)
    on left: 108, on right: 44 64
ELSE_IF (91)
    on left: 109 110, on right: 100
IF (92)
    on left: 111, on right: 99 100
ELSE (93)
    on left: 112, on right: 109
VAR_ASIG (94)
    on left: 113 114, on right: 6 8 20 22 37 59 103
ASIGNACION_VEC (95)
    on left: 115, on right: 7 9 21 23 38 76
DECLARAR_ARREGLO (96)
    on left: 116, on right: 18 32 57 79
VAR_DECLARACION (97)
    on left: 117, on right: 12 13 24 25 40 61 104
LISTAID (98)
    on left: 118 119, on right: 113 115 116 117 118
EXPRESION (99)
    on left: 120 121, on right: 120 131 134
DIMENCION (100)
    on left: 122 123 124, on right: 115 116 138
DIM1 (101)
    on left: 125, on right: 122
DIM2 (102)
    on left: 126, on right: 123
DIM3 (103)
    on left: 127, on right: 124
VALOR_VEC (104)
    on left: 128 129 130, on right: 115
UNIDIMENCION (105)
    on left: 131, on right: 128
BIDIMENCION (106)
    on left: 132 133, on right: 129 132 137
LISBI (107)
    on left: 134, on right: 132 133
TRIDIMENCION (108)
    on left: 135 136, on right: 130 135
LISTRI (109)
    on left: 137, on right: 135 136
ACCESO_VEC (110)
    on left: 138, on right: 139 190
REASIGNACION_VEC (111)
    on left: 139, on right: 14 28 41 75
ROMPER (112)
    on left: 140, on right: 45 65
SALIR (113)
    on left: 141, on right: 46 66
CONTINUAR (114)
    on left: 142, on right: 48 67
RETORNAR (115)
    on left: 143, on right: 47 68
NOTIFICACION (116)
    on left: 144, on right: 54 74
AUMENTO (117)
    on left: 145, on right: 49 69 105
DECREMENTO (118)
    on left: 146, on right: 50 70 106
LLAMADA (119)
    on left: 147 148, on right: 51 72 82 186
TIPO (120)
    on left: 149 150 151 152 153 154 155 156, on right: 86 87 96 113
    115 116 117
VISIBILIDAD (121)
    on left: 157 158 159, on right: 90 91
EXPL (122)
    on left: 160 161 162 163 164 165, on right: 81 96 97 98 101 102
    107 108 111 113 114 139 143 144 160 161 162 163 164 185
EXPR (123)
    on left: 166 167 168 169 170 171 172, on right: 165 166 167 168
    169 170 171
EXPA (124)
    on left: 173 174 175 176 177 178 179 180 181 182 183 184 185 186
    187 188 189 190, on right: 120 121 125 126 127 172 173 174 175
    176 177 178


State 0

    0 $accept: . INICIO $end

    tClase  shift, and go to state 1

    INICIO  go to state 2
    LCLASE  go to state 3
    CLASE   go to state 4


State 1

    4 CLASE: tClase . id llavI CUERPO llavD
    5      | tClase . id llavI llavD

    id  shift, and go to state 5


State 2

    0 $accept: INICIO . $end

    $end  shift, and go to state 6


State 3

    1 INICIO: LCLASE .
    2 LCLASE: LCLASE . CLASE

    tClase  shift, and go to state 1

    $default  reduce using rule 1 (INICIO)

    CLASE  go to state 7


State 4

    3 LCLASE: CLASE .

    $default  reduce using rule 3 (LCLASE)


State 5

    4 CLASE: tClase id . llavI CUERPO llavD
    5      | tClase id . llavI llavD

    llavI  shift, and go to state 8


State 6

    0 $accept: INICIO $end .

    $default  accept


State 7

    2 LCLASE: LCLASE CLASE .

    $default  reduce using rule 2 (LCLASE)


State 8

    4 CLASE: tClase id llavI . CUERPO llavD
    5      | tClase id llavI . llavD

    id             shift, and go to state 9
    llavD          shift, and go to state 10
    prInt          shift, and go to state 11
    prString       shift, and go to state 12
    prBooleano     shift, and go to state 13
    prBool         shift, and go to state 14
    prChar         shift, and go to state 15
    prDouble       shift, and go to state 16
    tMain          shift, and go to state 17
    tPublico       shift, and go to state 18
    tPrivado       shift, and go to state 19
    tProtegido     shift, and go to state 20
    tsobrescribir  shift, and go to state 21
    tVoid          shift, and go to state 22
    tArreglo       shift, and go to state 23

    CUERPO                  go to state 24
    MAIN                    go to state 25
    REASIGNACION_VAR_CLASE  go to state 26
    ACCES_VFM               go to state 27
    INSTANCIA               go to state 28
    OBJECTO_ASIGNACION      go to state 29
    METODO                  go to state 30
    ENCAPSULAR              go to state 31
    SOBRESRIBIR             go to state 32
    VAR_ASIG                go to state 33
    ASIGNACION_VEC          go to state 34
    DECLARAR_ARREGLO        go to state 35
    VAR_DECLARACION         go to state 36
    ACCESO_VEC              go to state 37
    REASIGNACION_VEC        go to state 38
    TIPO                    go to state 39
    VISIBILIDAD             go to state 40


State 9

   81 REASIGNACION_VAR_CLASE: id . tPunto id eq EXPL Dolar
   82 ACCES_VFM: id . tPunto LLAMADA
   83 INSTANCIA: id . id eq tNuevo id pari pard Dolar
   84          | id . id Dolar
   85 OBJECTO_ASIGNACION: id . eq tNuevo id pari pard Dolar
  114 VAR_ASIG: id . eq EXPL Dolar
  138 ACCESO_VEC: id . DIMENCION

    id      shift, and go to state 41
    corI    shift, and go to state 42
    eq      shift, and go to state 43
    tPunto  shift, and go to state 44

    DIMENCION  go to state 45
    DIM1       go to state 46
    DIM2       go to state 47
    DIM3       go to state 48


State 10

    5 CLASE: tClase id llavI llavD .

    $default  reduce using rule 5 (CLASE)


State 11

  149 TIPO: prInt .

    $default  reduce using rule 149 (TIPO)


State 12

  150 TIPO: prString .

    $default  reduce using rule 150 (TIPO)


State 13

  151 TIPO: prBooleano .

    $default  reduce using rule 151 (TIPO)


State 14

  152 TIPO: prBool .

    $default  reduce using rule 152 (TIPO)


State 15

  153 TIPO: prChar .

    $default  reduce using rule 153 (TIPO)


State 16

  154 TIPO: prDouble .

    $default  reduce using rule 154 (TIPO)


State 17

   34 MAIN: tMain . pari pard llavI LS llavD

    pari  shift, and go to state 49


State 18

  159 VISIBILIDAD: tPublico .

    $default  reduce using rule 159 (VISIBILIDAD)


State 19

  157 VISIBILIDAD: tPrivado .

    $default  reduce using rule 157 (VISIBILIDAD)


State 20

  158 VISIBILIDAD: tProtegido .

    $default  reduce using rule 158 (VISIBILIDAD)


State 21

   93 SOBRESRIBIR: tsobrescribir .

    $default  reduce using rule 93 (SOBRESRIBIR)


State 22

  155 TIPO: tVoid .

    $default  reduce using rule 155 (TIPO)


State 23

  115 ASIGNACION_VEC: tArreglo . TIPO LISTAID DIMENCION eq llavI VALOR_VEC llavD Dolar
  116 DECLARAR_ARREGLO: tArreglo . TIPO LISTAID DIMENCION Dolar
  156 TIPO: tArreglo .

    prInt       shift, and go to state 11
    prString    shift, and go to state 12
    prBooleano  shift, and go to state 13
    prBool      shift, and go to state 14
    prChar      shift, and go to state 15
    prDouble    shift, and go to state 16
    tVoid       shift, and go to state 22
    tArreglo    shift, and go to state 50

    $default  reduce using rule 156 (TIPO)

    TIPO  go to state 51


State 24

    4 CLASE: tClase id llavI CUERPO . llavD
    6 CUERPO: CUERPO . ENCAPSULAR VAR_ASIG
    7       | CUERPO . ENCAPSULAR ASIGNACION_VEC
    8       | CUERPO . VAR_ASIG
    9       | CUERPO . ASIGNACION_VEC
   10       | CUERPO . MAIN
   11       | CUERPO . METODO
   12       | CUERPO . ENCAPSULAR VAR_DECLARACION
   13       | CUERPO . VAR_DECLARACION
   14       | CUERPO . REASIGNACION_VEC
   15       | CUERPO . INSTANCIA
   16       | CUERPO . OBJECTO_ASIGNACION
   17       | CUERPO . ACCES_VFM Dolar
   18       | CUERPO . DECLARAR_ARREGLO
   19       | CUERPO . REASIGNACION_VAR_CLASE

    id             shift, and go to state 9
    llavD          shift, and go to state 52
    prInt          shift, and go to state 11
    prString       shift, and go to state 12
    prBooleano     shift, and go to state 13
    prBool         shift, and go to state 14
    prChar         shift, and go to state 15
    prDouble       shift, and go to state 16
    tMain          shift, and go to state 17
    tPublico       shift, and go to state 18
    tPrivado       shift, and go to state 19
    tProtegido     shift, and go to state 20
    tsobrescribir  shift, and go to state 21
    tVoid          shift, and go to state 22
    tArreglo       shift, and go to state 23

    MAIN                    go to state 53
    REASIGNACION_VAR_CLASE  go to state 54
    ACCES_VFM               go to state 55
    INSTANCIA               go to state 56
    OBJECTO_ASIGNACION      go to state 57
    METODO                  go to state 58
    ENCAPSULAR              go to state 59
    SOBRESRIBIR             go to state 32
    VAR_ASIG                go to state 60
    ASIGNACION_VEC          go to state 61
    DECLARAR_ARREGLO        go to state 62
    VAR_DECLARACION         go to state 63
    ACCESO_VEC              go to state 37
    REASIGNACION_VEC        go to state 64
    TIPO                    go to state 39
    VISIBILIDAD             go to state 40


State 25

   26 CUERPO: MAIN .

    $default  reduce using rule 26 (CUERPO)


State 26

   31 CUERPO: REASIGNACION_VAR_CLASE .

    $default  reduce using rule 31 (CUERPO)


State 27

   30 CUERPO: ACCES_VFM . Dolar

    Dolar  shift, and go to state 65


State 28

   29 CUERPO: INSTANCIA .

    $default  reduce using rule 29 (CUERPO)


State 29

   33 CUERPO: OBJECTO_ASIGNACION .

    $default  reduce using rule 33 (CUERPO)


State 30

   27 CUERPO: METODO .

    $default  reduce using rule 27 (CUERPO)


State 31

   20 CUERPO: ENCAPSULAR . VAR_ASIG
   21       | ENCAPSULAR . ASIGNACION_VEC
   24       | ENCAPSULAR . VAR_DECLARACION
   86 METODO: ENCAPSULAR . TIPO id MI_PARAMETRO llavI LS llavD

    id          shift, and go to state 66
    prInt       shift, and go to state 11
    prString    shift, and go to state 12
    prBooleano  shift, and go to state 13
    prBool      shift, and go to state 14
    prChar      shift, and go to state 15
    prDouble    shift, and go to state 16
    tVoid       shift, and go to state 22
    tArreglo    shift, and go to state 67

    VAR_ASIG         go to state 68
    ASIGNACION_VEC   go to state 69
    VAR_DECLARACION  go to state 70
    TIPO             go to state 71


State 32

   90 ENCAPSULAR: SOBRESRIBIR . VISIBILIDAD
   92           | SOBRESRIBIR .

    tPublico    shift, and go to state 18
    tPrivado    shift, and go to state 19
    tProtegido  shift, and go to state 20

    $default  reduce using rule 92 (ENCAPSULAR)

    VISIBILIDAD  go to state 72


State 33

   22 CUERPO: VAR_ASIG .

    $default  reduce using rule 22 (CUERPO)


State 34

   23 CUERPO: ASIGNACION_VEC .

    $default  reduce using rule 23 (CUERPO)


State 35

   32 CUERPO: DECLARAR_ARREGLO .

    $default  reduce using rule 32 (CUERPO)


State 36

   25 CUERPO: VAR_DECLARACION .

    $default  reduce using rule 25 (CUERPO)


State 37

  139 REASIGNACION_VEC: ACCESO_VEC . eq EXPL Dolar

    eq  shift, and go to state 73


State 38

   28 CUERPO: REASIGNACION_VEC .

    $default  reduce using rule 28 (CUERPO)


State 39

   87 METODO: TIPO . id MI_PARAMETRO llavI LS llavD
  113 VAR_ASIG: TIPO . LISTAID eq EXPL Dolar
  117 VAR_DECLARACION: TIPO . LISTAID Dolar

    id  shift, and go to state 74

    LISTAID  go to state 75


State 40

   91 ENCAPSULAR: VISIBILIDAD .

    $default  reduce using rule 91 (ENCAPSULAR)


State 41

   83 INSTANCIA: id id . eq tNuevo id pari pard Dolar
   84          | id id . Dolar

    eq     shift, and go to state 76
    Dolar  shift, and go to state 77


State 42

  125 DIM1: corI . EXPA corD
  126 DIM2: corI . EXPA corD corI EXPA corD
  127 DIM3: corI . EXPA corD corI EXPA corD corI EXPA corD

    entero    shift, and go to state 78
    decimal   shift, and go to state 79
    caracter  shift, and go to state 80
    booleano  shift, and go to state 81
    cadena    shift, and go to state 82
    id        shift, and go to state 83
    pari      shift, and go to state 84
    menos     shift, and go to state 85

    ACCES_VFM   go to state 86
    ACCESO_VEC  go to state 87
    LLAMADA     go to state 88
    EXPA        go to state 89


State 43

   85 OBJECTO_ASIGNACION: id eq . tNuevo id pari pard Dolar
  114 VAR_ASIG: id eq . EXPL Dolar

    entero    shift, and go to state 78
    decimal   shift, and go to state 79
    caracter  shift, and go to state 80
    booleano  shift, and go to state 81
    cadena    shift, and go to state 82
    id        shift, and go to state 83
    pari      shift, and go to state 84
    menos     shift, and go to state 85
    Snot      shift, and go to state 90
    tNuevo    shift, and go to state 91

    ACCES_VFM   go to state 86
    ACCESO_VEC  go to state 87
    LLAMADA     go to state 88
    EXPL        go to state 92
    EXPR        go to state 93
    EXPA        go to state 94


State 44

   81 REASIGNACION_VAR_CLASE: id tPunto . id eq EXPL Dolar
   82 ACCES_VFM: id tPunto . LLAMADA

    id  shift, and go to state 95

    LLAMADA  go to state 96


State 45

  138 ACCESO_VEC: id DIMENCION .

    $default  reduce using rule 138 (ACCESO_VEC)


State 46

  122 DIMENCION: DIM1 .

    $default  reduce using rule 122 (DIMENCION)


State 47

  123 DIMENCION: DIM2 .

    $default  reduce using rule 123 (DIMENCION)


State 48

  124 DIMENCION: DIM3 .

    $default  reduce using rule 124 (DIMENCION)


State 49

   34 MAIN: tMain pari . pard llavI LS llavD

    pard  shift, and go to state 97


State 50

  156 TIPO: tArreglo .

    $default  reduce using rule 156 (TIPO)


State 51

  115 ASIGNACION_VEC: tArreglo TIPO . LISTAID DIMENCION eq llavI VALOR_VEC llavD Dolar
  116 DECLARAR_ARREGLO: tArreglo TIPO . LISTAID DIMENCION Dolar

    id  shift, and go to state 98

    LISTAID  go to state 99


State 52

    4 CLASE: tClase id llavI CUERPO llavD .

    $default  reduce using rule 4 (CLASE)


State 53

   10 CUERPO: CUERPO MAIN .

    $default  reduce using rule 10 (CUERPO)


State 54

   19 CUERPO: CUERPO REASIGNACION_VAR_CLASE .

    $default  reduce using rule 19 (CUERPO)


State 55

   17 CUERPO: CUERPO ACCES_VFM . Dolar

    Dolar  shift, and go to state 100


State 56

   15 CUERPO: CUERPO INSTANCIA .

    $default  reduce using rule 15 (CUERPO)


State 57

   16 CUERPO: CUERPO OBJECTO_ASIGNACION .

    $default  reduce using rule 16 (CUERPO)


State 58

   11 CUERPO: CUERPO METODO .

    $default  reduce using rule 11 (CUERPO)


State 59

    6 CUERPO: CUERPO ENCAPSULAR . VAR_ASIG
    7       | CUERPO ENCAPSULAR . ASIGNACION_VEC
   12       | CUERPO ENCAPSULAR . VAR_DECLARACION
   86 METODO: ENCAPSULAR . TIPO id MI_PARAMETRO llavI LS llavD

    id          shift, and go to state 66
    prInt       shift, and go to state 11
    prString    shift, and go to state 12
    prBooleano  shift, and go to state 13
    prBool      shift, and go to state 14
    prChar      shift, and go to state 15
    prDouble    shift, and go to state 16
    tVoid       shift, and go to state 22
    tArreglo    shift, and go to state 67

    VAR_ASIG         go to state 101
    ASIGNACION_VEC   go to state 102
    VAR_DECLARACION  go to state 103
    TIPO             go to state 71


State 60

    8 CUERPO: CUERPO VAR_ASIG .

    $default  reduce using rule 8 (CUERPO)


State 61

    9 CUERPO: CUERPO ASIGNACION_VEC .

    $default  reduce using rule 9 (CUERPO)


State 62

   18 CUERPO: CUERPO DECLARAR_ARREGLO .

    $default  reduce using rule 18 (CUERPO)


State 63

   13 CUERPO: CUERPO VAR_DECLARACION .

    $default  reduce using rule 13 (CUERPO)


State 64

   14 CUERPO: CUERPO REASIGNACION_VEC .

    $default  reduce using rule 14 (CUERPO)


State 65

   30 CUERPO: ACCES_VFM Dolar .

    $default  reduce using rule 30 (CUERPO)


State 66

  114 VAR_ASIG: id . eq EXPL Dolar

    eq  shift, and go to state 104


State 67

  115 ASIGNACION_VEC: tArreglo . TIPO LISTAID DIMENCION eq llavI VALOR_VEC llavD Dolar
  156 TIPO: tArreglo .

    prInt       shift, and go to state 11
    prString    shift, and go to state 12
    prBooleano  shift, and go to state 13
    prBool      shift, and go to state 14
    prChar      shift, and go to state 15
    prDouble    shift, and go to state 16
    tVoid       shift, and go to state 22
    tArreglo    shift, and go to state 50

    $default  reduce using rule 156 (TIPO)

    TIPO  go to state 105


State 68

   20 CUERPO: ENCAPSULAR VAR_ASIG .

    $default  reduce using rule 20 (CUERPO)


State 69

   21 CUERPO: ENCAPSULAR ASIGNACION_VEC .

    $default  reduce using rule 21 (CUERPO)


State 70

   24 CUERPO: ENCAPSULAR VAR_DECLARACION .

    $default  reduce using rule 24 (CUERPO)


State 71

   86 METODO: ENCAPSULAR TIPO . id MI_PARAMETRO llavI LS llavD
  113 VAR_ASIG: TIPO . LISTAID eq EXPL Dolar
  117 VAR_DECLARACION: TIPO . LISTAID Dolar

    id  shift, and go to state 106

    LISTAID  go to state 75


State 72

   90 ENCAPSULAR: SOBRESRIBIR VISIBILIDAD .

    $default  reduce using rule 90 (ENCAPSULAR)


State 73

  139 REASIGNACION_VEC: ACCESO_VEC eq . EXPL Dolar

    entero    shift, and go to state 78
    decimal   shift, and go to state 79
    caracter  shift, and go to state 80
    booleano  shift, and go to state 81
    cadena    shift, and go to state 82
    id        shift, and go to state 83
    pari      shift, and go to state 84
    menos     shift, and go to state 85
    Snot      shift, and go to state 90

    ACCES_VFM   go to state 86
    ACCESO_VEC  go to state 87
    LLAMADA     go to state 88
    EXPL        go to state 107
    EXPR        go to state 93
    EXPA        go to state 94


State 74

   87 METODO: TIPO id . MI_PARAMETRO llavI LS llavD
  119 LISTAID: id .

    pari  shift, and go to state 108

    $default  reduce using rule 119 (LISTAID)

    MI_PARAMETRO  go to state 109


State 75

  113 VAR_ASIG: TIPO LISTAID . eq EXPL Dolar
  117 VAR_DECLARACION: TIPO LISTAID . Dolar
  118 LISTAID: LISTAID . coma id

    eq     shift, and go to state 110
    coma   shift, and go to state 111
    Dolar  shift, and go to state 112


State 76

   83 INSTANCIA: id id eq . tNuevo id pari pard Dolar

    tNuevo  shift, and go to state 113


State 77

   84 INSTANCIA: id id Dolar .

    $default  reduce using rule 84 (INSTANCIA)


State 78

  179 EXPA: entero .

    $default  reduce using rule 179 (EXPA)


State 79

  181 EXPA: decimal .

    $default  reduce using rule 181 (EXPA)


State 80

  180 EXPA: caracter .

    $default  reduce using rule 180 (EXPA)


State 81

  182 EXPA: booleano .

    $default  reduce using rule 182 (EXPA)


State 82

  183 EXPA: cadena .

    $default  reduce using rule 183 (EXPA)


State 83

   82 ACCES_VFM: id . tPunto LLAMADA
  138 ACCESO_VEC: id . DIMENCION
  147 LLAMADA: id . pari LPARAMETRO pard
  148        | id . pari pard
  184 EXPA: id .
  188     | id . tPunto id
  189     | id . id

    id      shift, and go to state 114
    pari    shift, and go to state 115
    corI    shift, and go to state 42
    tPunto  shift, and go to state 116

    $default  reduce using rule 184 (EXPA)

    DIMENCION  go to state 45
    DIM1       go to state 46
    DIM2       go to state 47
    DIM3       go to state 48


State 84

  185 EXPA: pari . EXPL pard

    entero    shift, and go to state 78
    decimal   shift, and go to state 79
    caracter  shift, and go to state 80
    booleano  shift, and go to state 81
    cadena    shift, and go to state 82
    id        shift, and go to state 83
    pari      shift, and go to state 84
    menos     shift, and go to state 85
    Snot      shift, and go to state 90

    ACCES_VFM   go to state 86
    ACCESO_VEC  go to state 87
    LLAMADA     go to state 88
    EXPL        go to state 117
    EXPR        go to state 93
    EXPA        go to state 94


State 85

  178 EXPA: menos . EXPA

    entero    shift, and go to state 78
    decimal   shift, and go to state 79
    caracter  shift, and go to state 80
    booleano  shift, and go to state 81
    cadena    shift, and go to state 82
    id        shift, and go to state 83
    pari      shift, and go to state 84
    menos     shift, and go to state 85

    ACCES_VFM   go to state 86
    ACCESO_VEC  go to state 87
    LLAMADA     go to state 88
    EXPA        go to state 118


State 86

  187 EXPA: ACCES_VFM .
